--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,4 +2,7 @@
   "prettier.singleQuote": true,
   "prettier.tabWidth": 2,
   "prettier.useTabs": false,
+  "python.defaultInterpreterPath": "/home/keith/miniconda3/envs/flappy_kivy/bin/python",
+  "python.linting.enabled": true,
+  "python.linting.pylintEnabled": true
 }
