--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^5.2.1"
   }
 }
