Added a resizable feature, its not yet finished but it will be in the future

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,6 @@
   "prettier.useTabs": false,
   "python.defaultInterpreterPath": "/home/keith/miniconda3/envs/flappy_kivy/bin/python",
   "python.linting.enabled": true,
-  "python.linting.pylintEnabled": true
+  "python.linting.pylintEnabled": true,
+  "python.REPL.enableREPLSmartSend": false
 }
